feat: add translations
